# eocia-haskell

./: .gitignore  LICENSE  Makefile  README.md  eocia-haskell.cabal  flake.nix  hie.yaml  justfile
app/: Main.hs
docs/: CVar.ebnf  LInt.ebnf  LVar.ebnf  X86Int.ebnf
src/: CVar.hs  Core.hs  Gensym.hs  LInt.hs  LVar.hs  Pipeline.hs  Pre.hs  X86.hs  X86Int.hs
src/Core/: Gensym.hs  Input.hs  Pretty.hs
src/Interpreter/: Lint.hs
src/Stage/: CVar.hs  LInt.hs  LVar.hs  LVarMon.hs  X86.hs  X86Int.hs  X86Var.hs
test/: Arbitrary.hs  Main.hs  TestCVar.hs  TestLInt.hs  TestLVar.hs  TestPipeline.hs  TestX86Int.hs
