cabal-version: 3.0
name:          eocia-haskell
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common defaults
  default-extensions: BlockArguments

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

library
  import:           warnings, defaults
  ghc-options:      -O2
  hs-source-dirs:   src
  default-language: GHC2024
  exposed-modules:
    Core
    CVar
    Gensym
    LInt
    LVar
    Pipeline
    X86
    X86Int

  build-depends:
    , base                  >=4.7   && <5
    , hashable
    , mtl
    , prettyprinter
    , text                  ==2.1.2
    , unordered-containers

executable eocia-haskell
  import:           warnings
  ghc-options:      -O2
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: GHC2024
  build-depends:
    , base           >=4.7 && <5
    , eocia-haskell

test-suite eocia-haskell-test
  import:             warnings, defaults
  ghc-options:        -O2 -Wno-orphans
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   GHC2024
  main-is:            Driver.hs
  other-modules:      TestLInt
  build-tool-depends: tasty-discover:tasty-discover
  build-depends:
    , base              >=4.7 && <5
    , eocia-haskell
    , QuickCheck
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck
