cabal-version: 3.0
name:          eocia-haskell
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common defaults
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock
    -Wno-orphans

library
  import:          warnings, defaults
  ghc-options:     -O2
  hs-source-dirs:  src
  exposed-modules:
    Core
    Core.Gensym
    Core.Pretty
    Pipeline
    Stage.CVar
    Stage.LInt
    Stage.LVar
    Stage.LVarMon
    Stage.X86Int
    Stage.X86Var

  build-depends:
    , algebraic-graphs
    , base                  >=4.7   && <5
    , hashable
    , mtl
    , prettyprinter
    , text                  ==2.1.2
    , unordered-containers

executable eocia-haskell
  import:         warnings, defaults
  ghc-options:    -O2
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base           >=4.7 && <5
    , eocia-haskell

test-suite eocia-haskell-test
  import:             warnings, defaults
  default-extensions: OverloadedStrings
  ghc-options:        -O2 -Wno-orphans
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Arbitrary
    TestCVar
    TestLInt
    TestLVar
    TestPipeline
    TestX86Int

  build-depends:
    , algebraic-graphs
    , base                  >=4.7   && <5
    , eocia-haskell
    , mtl
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text                  ==2.1.2
    , unordered-containers
