cabal-version: 3.0
name:          eocia-haskell
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common defaults
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    MultilineStrings

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock
    -Wno-orphans -fhide-source-paths -Wno-missing-exported-signatures
    -Wno-missed-specialisations -Wno-all-missed-specialisations
    -Wno-safe -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module -Wno-unused-packages
    -Wno-missing-role-annotations -Wno-missing-poly-kind-signatures
    -fplugin=Effectful.Plugin

common dependencies
  build-depends:
    , algebraic-graphs
    , base
    , effectful
    , effectful-core
    , effectful-plugin
    , effectful-th
    , hashable
    , prettyprinter
    , text
    , unordered-containers

library
  import:             warnings, defaults, dependencies
  ghc-options:        -O2
  hs-source-dirs:     src
  exposed-modules:
    Core
    Core.Gensym
    Core.Input
    Core.Pretty
    Pipeline
    Pre
    Stage.CVar
    Stage.LInt
    Stage.LVar
    Stage.LVarMon
    Stage.X86Int
    Stage.X86Var

  default-extensions: NoImplicitPrelude

executable eocia-haskell
  import:         warnings, defaults, dependencies
  ghc-options:    -O2
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  eocia-haskell

test-suite eocia-haskell-test
  import:             warnings, defaults, dependencies
  default-extensions: OverloadedStrings
  ghc-options:        -O2 -Wno-orphans
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Arbitrary
    TestCVar
    TestLInt
    TestLVar
    TestPipeline
    TestX86Int

  build-depends:
    , eocia-haskell
    , tasty
    , tasty-hunit
    , tasty-quickcheck
